target/main/MiniGoParser.py
# Generated from main/MiniGo.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'main'", "'var'", "'const'", "'if'", 
                     "'else'", "'for'", "'return'", "'func'", "'type'", 
                     "'struct'", "'interface'", "'string'", "'int'", "'float'", 
                     "'boolean'", "'continue'", "'break'", "'range'", "'true'", 
                     "'false'", "'nil'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'&&'", "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", 
                     "'>='", "'!'", "'='", "'+='", "'-='", "'*='", "'/='", 
                     "'%='", "':='", "'['", "']'", "'{'", "'}'", "'('", 
                     "')'", "','", "';'", "':'", "'.'", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "VAR", "CONST", "IF", "ELSE", 
                      "FOR", "RETURN", "FUNCTION", "TYPE", "STRUCT", "INTERFACE", 
                      "STRING_TYPE", "INT_TYPE", "FLOAT_TYPE", "BOOLEAN_TYPE", 
                      "CONTINUE", "BREAK", "RANGE", "TRUE", "FALSE", "NIL", 
                      "ADD", "SUB", "MUL", "DIV", "MOD", "AND", "OR", "EQ", 
                      "NOT_EQ", "LT", "GT", "LTE", "GTE", "NEGATION", "ASSIGN", 
                      "ADDASSIGN", "SUBASSIGN", "MULASSIGN", "DIVASSIGN", 
                      "MODASSIGN", "ASSIGN_COLON", "LBRACK", "RBRACK", "LBRACE", 
                      "RBRACE", "LPAREN", "RPAREN", "COMMA", "SEMI_COLON", 
                      "COLON", "DOT", "UNDERSCORE", "IDENTIFIER", "STRINGLIT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "INT", "FLOAT", 
                      "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "NL", 
                      "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_mainFuncDecl = 2
    RULE_vardecl = 3
    RULE_constdecl = 4
    RULE_typedecl = 5
    RULE_funcdecl = 6
    RULE_receiver = 7
    RULE_typeDef = 8
    RULE_basictype = 9
    RULE_structType = 10
    RULE_fieldList = 11
    RULE_field = 12
    RULE_interfaceType = 13
    RULE_methodList = 14
    RULE_method = 15
    RULE_method_param_opt = 16
    RULE_method_type_opt = 17
    RULE_arrayType = 18
    RULE_dim = 19
    RULE_intExpr = 20
    RULE_paramList = 21
    RULE_param = 22
    RULE_block = 23
    RULE_stmt_list = 24
    RULE_stmt = 25
    RULE_assignment = 26
    RULE_assign_op = 27
    RULE_ifStmt = 28
    RULE_ifStmt_else_opt = 29
    RULE_forStmt = 30
    RULE_forClauseComplex = 31
    RULE_forClause_init = 32
    RULE_forClause_cond = 33
    RULE_forClause_update = 34
    RULE_forClauseSimple = 35
    RULE_forRangeStmt = 36
    RULE_forRange_tail = 37
    RULE_break_stmt = 38
    RULE_continue_stmt = 39
    RULE_return_stmt = 40
    RULE_expr = 41
    RULE_logicalOrExpr = 42
    RULE_logicalAndExpr = 43
    RULE_equalityExpr = 44
    RULE_relationalExpr = 45
    RULE_additiveExpr = 46
    RULE_multiplicativeExpr = 47
    RULE_unaryExpr = 48
    RULE_primaryExpr = 49
    RULE_arguments = 50
    RULE_argumentList = 51
    RULE_callStmt = 52
    RULE_lhs = 53
    RULE_arrayOrStructAccess = 54
    RULE_literal = 55
    RULE_compositeLiteral = 56
    RULE_arrayCompositeLiteral = 57
    RULE_arrayLiteralBody = 58
    RULE_arrayLiteralElementList = 59
    RULE_arrayLiteralElement = 60
    RULE_arrayLiteral = 61
    RULE_nonArrayTypeDef = 62
    RULE_structCompositeLiteral = 63
    RULE_structLiteralBody = 64
    RULE_structLiteralElementList = 65
    RULE_structLiteralElement = 66

    ruleNames =  [ "program", "decl", "mainFuncDecl", "vardecl", "constdecl", 
                   "typedecl", "funcdecl", "receiver", "typeDef", "basictype", 
                   "structType", "fieldList", "field", "interfaceType", 
                   "methodList", "method", "method_param_opt", "method_type_opt", 
                   "arrayType", "dim", "intExpr", "paramList", "param", 
                   "block", "stmt_list", "stmt", "assignment", "assign_op", 
                   "ifStmt", "ifStmt_else_opt", "forStmt", "forClauseComplex", 
                   "forClause_init", "forClause_cond", "forClause_update", 
                   "forClauseSimple", "forRangeStmt", "forRange_tail", "break_stmt", 
                   "continue_stmt", "return_stmt", "expr", "logicalOrExpr", 
                   "logicalAndExpr", "equalityExpr", "relationalExpr", "additiveExpr", 
                   "multiplicativeExpr", "unaryExpr", "primaryExpr", "arguments", 
                   "argumentList", "callStmt", "lhs", "arrayOrStructAccess", 
                   "literal", "compositeLiteral", "arrayCompositeLiteral", 
                   "arrayLiteralBody", "arrayLiteralElementList", "arrayLiteralElement", 
                   "arrayLiteral", "nonArrayTypeDef", "structCompositeLiteral", 
                   "structLiteralBody", "structLiteralElementList", "structLiteralElement" ]

    EOF = Token.EOF
    T__0=1
    VAR=2
    CONST=3
    IF=4
    ELSE=5
    FOR=6
    RETURN=7
    FUNCTION=8
    TYPE=9
    STRUCT=10
    INTERFACE=11
    STRING_TYPE=12
    INT_TYPE=13
    FLOAT_TYPE=14
    BOOLEAN_TYPE=15
    CONTINUE=16
    BREAK=17
    RANGE=18
    TRUE=19
    FALSE=20
    NIL=21
    ADD=22
    SUB=23
    MUL=24
    DIV=25
    MOD=26
    AND=27
    OR=28
    EQ=29
    NOT_EQ=30
    LT=31
    GT=32
    LTE=33
    GTE=34
    NEGATION=35
    ASSIGN=36
    ADDASSIGN=37
    SUBASSIGN=38
    MULASSIGN=39
    DIVASSIGN=40
    MODASSIGN=41
    ASSIGN_COLON=42
    LBRACK=43
    RBRACK=44
    LBRACE=45
    RBRACE=46
    LPAREN=47
    RPAREN=48
    COMMA=49
    SEMI_COLON=50
    COLON=51
    DOT=52
    UNDERSCORE=53
    IDENTIFIER=54
    STRINGLIT=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57
    INT=58
    FLOAT=59
    SINGLE_LINE_COMMENT=60
    MULTI_LINE_COMMENT=61
    NL=62
    WS=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniGoParser.DeclContext)
            else:
                return self.getTypedRuleContext(MiniGoParser.DeclContext,i)


        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 134
                self.decl()
                self.state = 137 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniGoParser.VAR) | (1 << MiniGoParser.CONST) | (1 << MiniGoParser.FUNCTION) | (1 << MiniGoParser.TYPE))) != 0)):
                    break

            self.state = 139
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainFuncDecl(self):
            return self.getTypedRuleContext(MiniGoParser.MainFuncDeclContext,0)


        def vardecl(self):
            return self.getTypedRuleContext(MiniGoParser.VardeclContext,0)


        def constdecl(self):
            return self.getTypedRuleContext(MiniGoParser.ConstdeclContext,0)


        def typedecl(self):
            return self.getTypedRuleContext(MiniGoParser.TypedeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(MiniGoParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 146
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 141
                self.mainFuncDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.vardecl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 143
                self.constdecl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 144
                self.typedecl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 145
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainFuncDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MiniGoParser.FUNCTION, 0)

        def LPAREN(self):
            return self.getToken(MiniGoParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(MiniGoParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(MiniGoParser.BlockContext,0)


        def SEMI_COLON(self):
            return self.getToken(MiniGoParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_mainFuncDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainFuncDecl" ):
                return visitor.visitMainFuncDecl(self)
            else:
                return visitor.visitChildren(self)




    def mainFuncDecl(self):

        localctx = MiniGoParser.MainFuncDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mainFuncDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(MiniGoParser.FUNCTION)
            self.state = 149
            self.match(MiniGoParser.T__0)
            self.state = 150
            self.match(MiniGoParser.LPAREN)
            self.state = 151
            self.match(MiniGoParser.RPAREN)
            self.state = 152
            self.block()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniGoParser.SEMI_COLON:
                self.state = 153
                self.match(MiniGoParser.SEMI_COLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(MiniGoParser.VAR, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def SEMI_COLON(self):
            return self.getToken(MiniGoParser.SEMI_COLON, 0)

        def typeDef(self):
            return self.getTypedRuleContext(MiniGoParser.TypeDefContext,0)


        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MiniGoParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_vardecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(MiniGoParser.VAR)
            self.state = 157
            self.match(MiniGoParser.IDENTIFIER)
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MiniGoParser.STRUCT, MiniGoParser.INTERFACE, MiniGoParser.STRING_TYPE, MiniGoParser.INT_TYPE, MiniGoParser.FLOAT_TYPE, MiniGoParser.BOOLEAN_TYPE, MiniGoParser.LBRACK, MiniGoParser.IDENTIFIER]:
                self.state = 158
                self.typeDef()
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MiniGoParser.ASSIGN:
                    self.state = 159
                    self.match(MiniGoParser.ASSIGN)
                    self.state = 160
                    self.expr()


                pass
            elif token in [MiniGoParser.ASSIGN]:
                self.state = 163
                self.match(MiniGoParser.ASSIGN)
                self.state = 164
                self.expr()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 167
            self.match(MiniGoParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(MiniGoParser.CONST, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def ASSIGN(self):
            return self.getToken(MiniGoParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def SEMI_COLON(self):
            return self.getToken(MiniGoParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_constdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstdecl" ):
                return visitor.visitConstdecl(self)
            else:
                return visitor.visitChildren(self)




    def constdecl(self):

        localctx = MiniGoParser.ConstdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_constdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 169
            self.match(MiniGoParser.CONST)
            self.state = 170
            self.match(MiniGoParser.IDENTIFIER)
            self.state = 171
            self.match(MiniGoParser.ASSIGN)
            self.state = 172
            self.expr()
            self.state = 173
            self.match(MiniGoParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypedeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(MiniGoParser.TYPE, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def typeDef(self):
            return self.getTypedRuleContext(MiniGoParser.TypeDefContext,0)


        def SEMI_COLON(self):
            return self.getToken(MiniGoParser.SEMI_COLON, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_typedecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedecl" ):
                return visitor.visitTypedecl(self)
            else:
                return visitor.visitChildren(self)




    def typedecl(self):

        localctx = MiniGoParser.TypedeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_typedecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.match(MiniGoParser.TYPE)
            self.state = 176
            self.match(MiniGoParser.IDENTIFIER)
            self.state = 177
            self.typeDef()
            self.state = 178
            self.match(MiniGoParser.SEMI_COLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(MiniGoParser.FUNCTION, 0)

        def IDENTIFIER(self):
            return self.getToken(MiniGoParser.IDENTIFIER, 0)

        def LPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.LPAREN)
            else:
                return self.getToken(MiniGoParser.LPAREN, i)

        def RPAREN(self, i:int=None):
            if i is None:
                return self.getTokens(MiniGoParser.RPAREN)
            else:
                return self.getToken(MiniGoParser.RPAREN, i)

        def block(self):
            return self.getTypedRuleContext(MiniGoParser.BlockContext,0)


        def SEMI_COLON(self):
            return self.getToken(MiniGoParser.SEMI_COLON, 0)

        def receiver(self):
            return self.getTypedRuleContext(MiniGoParser.ReceiverContext,0)


        def paramList(self):
            return self.getTypedRuleContext(MiniGoParser.ParamListContext,0)


        def typeDef(self):
            return self.getTypedRuleContext(MiniGoParser.TypeDefContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):
